Update collated file

--- a/collated/main/A0139248X.md
+++ b/collated/main/A0139248X.md
@@ -162,7 +162,7 @@ public class MultipleIndexCommandUtil {
         assert model != null;
         try {
             model.addTask(toAdd);
-            scrollTo(toAdd);
+            scrollTo();
             return new CommandResult(String.format(MESSAGE_SUCCESS, toAdd));
         } catch (UniqueTaskList.DuplicateTaskException e) {
             throw new CommandException(MESSAGE_DUPLICATE_TASK);
@@ -176,7 +176,7 @@ public class MultipleIndexCommandUtil {
     /**
      * Scrolls to the newly added task.
      */
-    private void scrollTo(Task task) {
+    private void scrollTo() {
         UnmodifiableObservableList<ReadOnlyTask> lastShownList = model.getFilteredTaskList();
         int index = lastShownList.lastIndexOf(toAdd);
         EventsCenter.getInstance().post(new JumpToListRequestEvent(index));
@@ -236,15 +236,15 @@ public class MultipleIndexCommandUtil {
             throw new CommandException(Messages.MESSAGE_RECUR_FAILURE);
         }
         model.updateFilteredListToShowAll();
+        lastShownList = model.getFilteredTaskList();
         scrollTo(editedTask, lastShownList);
         return new CommandResult(String.format(MESSAGE_EDIT_TASK_SUCCESS, taskToEdit));
     }
 
     /**
-     * Scrolls to the newly edited list
+     * Scrolls to the newly edited task
      */
     private void scrollTo(Task editedTask, List<ReadOnlyTask> lastShownList) {
-        lastShownList = model.getFilteredTaskList(); // to scroll to edited task
         EventsCenter.getInstance().post(new JumpToListRequestEvent(lastShownList.lastIndexOf(editedTask)));
     }
 ```
