Refactor read only item manager to read only task manager

--- a/collated/main/A0138909R.md
+++ b/collated/main/A0138909R.md
@@ -496,7 +496,7 @@ package seedu.doit.commons.events.storage;
 import java.util.Optional;
 
 import seedu.doit.commons.events.BaseEvent;
-import seedu.doit.model.ReadOnlyItemManager;
+import seedu.doit.model.ReadOnlyTaskManager;
 
 public class TaskManagerLoadChangedEvent extends BaseEvent {
     private Optional<ReadOnlyItemManager> data;
