--- a/collated/main/A0139399J.md
+++ b/collated/main/A0139399J.md
@@ -2422,7 +2422,7 @@ public class UserPrefs {
 package seedu.doit.model.util;
 
 import seedu.doit.commons.exceptions.IllegalValueException;
-import seedu.doit.model.ReadOnlyItemManager;
+import seedu.doit.model.ReadOnlyTaskManager;
 import seedu.doit.model.TaskManager;
 import seedu.doit.model.item.Description;
 import seedu.doit.model.item.EndTime;
