--- a/collated/main/A0164212U.md
+++ b/collated/main/A0164212U.md
@@ -1,11 +1,11 @@
 # A0164212U
-###### \java\seedu\task\commons\core\Messages.java
+###### /java/seedu/task/commons/core/Messages.java
 ``` java
     public static final String MESSSAGE_INVALID_TIMING_ORDER = "The start and end times are not in chronological order";
 
 }
 ```
-###### \java\seedu\task\commons\exceptions\IllegalTimingOrderException.java
+###### /java/seedu/task/commons/exceptions/IllegalTimingOrderException.java
 ``` java
 package seedu.task.commons.exceptions;
 
@@ -21,7 +21,7 @@ public class IllegalTimingOrderException extends Exception {
     }
 }
 ```
-###### \java\seedu\task\logic\commands\AddCommand.java
+###### /java/seedu/task/logic/commands/AddCommand.java
 ``` java
     /**
      * Creates an AddCommand using raw values.
@@ -56,7 +56,7 @@ public class IllegalTimingOrderException extends Exception {
         this.toAdd = (Task) task;
     }
 ```
-###### \java\seedu\task\logic\commands\CompleteCommand.java
+###### /java/seedu/task/logic/commands/CompleteCommand.java
 ``` java
     @Override
     public CommandResult execute() throws CommandException {
@@ -95,7 +95,7 @@ public class IllegalTimingOrderException extends Exception {
         }
     }
 ```
-###### \java\seedu\task\logic\commands\DeleteCommand.java
+###### /java/seedu/task/logic/commands/DeleteCommand.java
 ``` java
     @Override
     public CommandResult execute() throws CommandException {
@@ -135,7 +135,7 @@ public class IllegalTimingOrderException extends Exception {
 
 }
 ```
-###### \java\seedu\task\logic\commands\EditCommand.java
+###### /java/seedu/task/logic/commands/EditCommand.java
 ``` java
     @Override
     public CommandResult execute() throws CommandException {
@@ -173,7 +173,7 @@ public class IllegalTimingOrderException extends Exception {
         return new CommandResult(String.format(MESSAGE_EDIT_TASK_SUCCESS, taskToEdit));
     }
 ```
-###### \java\seedu\task\model\ModelManager.java
+###### /java/seedu/task/model/ModelManager.java
 ``` java
         /**
          * @param ReadOnlyTask
@@ -220,7 +220,7 @@ public class IllegalTimingOrderException extends Exception {
                     .isPresent());
         }
 ```
-###### \java\seedu\task\model\task\Priority.java
+###### /java/seedu/task/model/task/Priority.java
 ``` java
 package seedu.task.model.task;
 
@@ -310,7 +310,7 @@ public class Priority implements Comparable<Priority> {
     }
 
 ```
-###### \java\seedu\task\model\task\RecurringFrequency.java
+###### /java/seedu/task/model/task/RecurringFrequency.java
 ``` java
 package seedu.task.model.task;
 
@@ -393,7 +393,7 @@ public class RecurringFrequency {
     }
 }
 ```
-###### \java\seedu\task\model\task\RecurringTaskOccurrence.java
+###### /java/seedu/task/model/task/RecurringTaskOccurrence.java
 ``` java
 package seedu.task.model.task;
 
@@ -448,7 +448,7 @@ public class RecurringTaskOccurrence {
     }
 }
 ```
-###### \java\seedu\task\model\task\Task.java
+###### /java/seedu/task/model/task/Task.java
 ``` java
 package seedu.task.model.task;
 
@@ -825,7 +825,7 @@ public class Task implements ReadOnlyTask, Comparable<Task> {
     }
 
 ```
-###### \java\seedu\task\model\task\Timing.java
+###### /java/seedu/task/model/task/Timing.java
 ``` java
 package seedu.task.model.task;
 
@@ -990,7 +990,7 @@ public class Timing implements Comparable<Timing> {
     }
 
 ```
-###### \java\seedu\task\ui\PersonCard.java
+###### /java/seedu/task/ui/PersonCard.java
 ``` java
     @FXML
     private Label description;
@@ -1048,7 +1048,7 @@ public class Timing implements Comparable<Timing> {
         initTags(task);
     }
 ```
-###### \resources\view\PersonListCard.fxml
+###### /resources/view/PersonListCard.fxml
 ``` fxml
                         <FlowPane fx:id="tags" />
                         <Label fx:id="priority" styleClass="cell_small_label" text="\$priority" />
@@ -1056,7 +1056,7 @@ public class Timing implements Comparable<Timing> {
 						<Label fx:id="endTiming" styleClass="cell_small_label" text="\$endTiming" />
 						<Label fx:id="recurring" styleClass="cell_small_label" text="\$recurring" />
 ```
-###### \resources\view\PersonListCard.fxml
+###### /resources/view/PersonListCard.fxml
 ``` fxml
                     </children>
                 </VBox>
