Add Final Collated Files

--- a/collated/main/A0146757R.md
+++ b/collated/main/A0146757R.md
@@ -1,250 +1,255 @@
 # A0146757R
+###### /src/main/java/seedu/task/logic/commands/AddCommand.java
+``` java
+    public static final String MESSAGE_INVALID_DATE_FORMAT = "Invalid date, try ddmmyy-ddmmyy ";
+    public static final String MESSAGE_INVALID_TIME_FORMAT = "Invalid time format, be more prcise or try hhmm, "
+            + "hh:mm, or h:mm";
+    public static final String MESSAGE_INVALID_TIME = "Start time can't be after end time.";
+    public static final String MESSAGE_INVALID_DATE = "Start time can't be after end time.";
+```
 ###### /src/main/java/seedu/task/logic/commands/DoneCommand.java
 ``` java
 /**
- * Mark a task as completed which is identified using it's last displayed index
- * from the task manager.
+ * Mark a task as completed which is identified using it's last displayed index from the task
+ * manager.
  */
 public class DoneCommand extends Command {
 
-	public static final String COMMAND_WORD = "done";
+    public static final String COMMAND_WORD = "done";
 
-	public static final String MESSAGE_USAGE = COMMAND_WORD
-			+ ": Mark a task as completed which is identified by the index number used in the last task listing.\n"
-			+ "Parameters: INDEX [MORE INDECIES] (must be positive integers)\n" + "Example: " + COMMAND_WORD + " 1";
+    public static final String MESSAGE_USAGE = COMMAND_WORD
+            + ": Mark a task as completed which is identified by the index number used in the last task listing.\n"
+            + "Parameters: INDEX [MORE INDECIES] (must be positive integers)\n" + "Example: "
+            + COMMAND_WORD + " 1";
 
-	public static final String MESSAGE_COMPLETED_TASK_SUCCESS = "Completed Task: %1$s";
-	public static final String MESSAGE_ALREADY_COMPLETED = "The task is already done.";
-	public final String MESSAGE_DUPLICATE = "The task is a duplicate of an existing task.";
-	public final String MESSAGE_NOT_FOUND = "The task was not found.";
+    public static final String MESSAGE_COMPLETED_TASK_SUCCESS = "Completed Task: %1$s";
+    public static final String MESSAGE_ALREADY_COMPLETED = "The task is already done.";
+    public final String MESSAGE_DUPLICATE = "The task is a duplicate of an existing task.";
+    public final String MESSAGE_NOT_FOUND = "The task was not found.";
 
-	public int[] targetIndex;
-	public String targetStatus;
+    public int[] targetIndex;
+    public String targetStatus;
 
-	public DoneCommand(int[] targetIndex) {
-		this.targetIndex = targetIndex;
-	}
+    public DoneCommand(int[] targetIndex) {
+        this.targetIndex = targetIndex;
+    }
 
-	@Override
-	public CommandResult execute() throws CommandException {
+    @Override
+    public CommandResult execute() throws CommandException {
 
-		assert model != null;
-		UnmodifiableObservableList<ReadOnlyTask> lastShownList = model.getFilteredTaskList();
-		StringBuilder sb = new StringBuilder();
-		for (int i = 0; i < targetIndex.length; i++) {
-			if (lastShownList.size() < targetIndex[i]) {
-				indicateAttemptToExecuteIncorrectCommand();
-				return new CommandResult(Messages.MESSAGE_INVALID_TASK_DISPLAYED_INDEX);
+        assert model != null;
+        UnmodifiableObservableList<ReadOnlyTask> lastShownList = model.getFilteredTaskList();
+        StringBuilder sb = new StringBuilder();
+        for (int i = 0; i < targetIndex.length; i++) {
+            if (lastShownList.size() < targetIndex[i]) {
+                indicateAttemptToExecuteIncorrectCommand();
+                return new CommandResult(Messages.MESSAGE_INVALID_TASK_DISPLAYED_INDEX);
 
-			}
-			ReadOnlyTask taskToComplete = lastShownList.get(targetIndex[i] - 1);
+            }
+            ReadOnlyTask taskToComplete = lastShownList.get(targetIndex[i] - 1);
 
-			targetStatus = taskToComplete.getTaskStatus().status;
-			if (targetStatus.equals(TaskStatus.MESSAGE_DONE)) {
-				return new CommandResult(MESSAGE_ALREADY_COMPLETED);
-			}
+            targetStatus = taskToComplete.getTaskStatus().status;
+            if (targetStatus.equals(TaskStatus.MESSAGE_DONE)) {
+                return new CommandResult(MESSAGE_ALREADY_COMPLETED);
+            }
 
-			try {
-				model.completeTask(targetIndex[i] - 1);
-				// to focus on the completed task
-				// EventsCenter.getInstance().post(new
-				// JumpToListRequestEvent(model.getFilteredTaskList().size() -
-				// 1));
+            try {
+                model.completeTask(targetIndex[i] - 1);
 
-			} catch (TaskNotFoundException pnfe) {
-				// remove this command from list for undo
-				assert false : "The target task cannot be found";
-			}
-			sb.append(String.format(MESSAGE_COMPLETED_TASK_SUCCESS, targetIndex[i]));
-			sb.append("\n");
-		}
-		return new CommandResult(sb.toString());
-	}
+            } catch (TaskNotFoundException pnfe) {
+                // remove this command from list for undo
+                assert false : "The target task cannot be found";
+            }
+            sb.append(String.format(MESSAGE_COMPLETED_TASK_SUCCESS, targetIndex[i]));
+            sb.append("\n");
+        }
+        return new CommandResult(sb.toString());
+    }
 
-	public boolean isUndoable() {
-		return true;
-	}
+    @Override
+    public boolean isUndoable() {
+        return true;
+    }
 }
 ```
 ###### /src/main/java/seedu/task/logic/parser/DoneCommandParser.java
 ``` java
 public class DoneCommandParser {
-	/**
-	 * Parses the given {@code String} of arguments in the context of the
-	 * DeleteCommand and returns an DeleteCommand object for execution.
-	 */
-	public Command parse(String args) {
+    /**
+     * Parses the given {@code String} of arguments in the context of the
+     * DeleteCommand and returns an DeleteCommand object for execution.
+     */
+    public Command parse(String args) {
 
-		final Matcher matcher = DONE_ARGS_FORMAT.matcher(args.trim());
-		if (!matcher.matches()) {
-			return new IncorrectCommand(String.format(MESSAGE_INVALID_COMMAND_FORMAT, DoneCommand.MESSAGE_USAGE));
-		}
-		final String[] index = matcher.group("index").split("\\s+");
-		int[] targetIndex = new int[index.length];
-		for (int i = 0; i < index.length; i++) {
-			if (Integer.parseInt(index[i]) < 1) {
-				return new IncorrectCommand(String.format(MESSAGE_INVALID_COMMAND_FORMAT, DoneCommand.MESSAGE_USAGE));
-			}
-			targetIndex[i] = Integer.parseInt(index[i]);
-		}
-		targetIndex = sort(targetIndex);
-		return new DoneCommand(targetIndex);
-	}
+        final Matcher matcher = DONE_ARGS_FORMAT.matcher(args.trim());
+        if (!matcher.matches()) {
+            return new IncorrectCommand(String.format(MESSAGE_INVALID_COMMAND_FORMAT, DoneCommand.MESSAGE_USAGE));
+        }
+        final String[] index = matcher.group("index").split("\\s+");
+        int[] targetIndex = new int[index.length];
+        for (int i = 0; i < index.length; i++) {
+            if (Integer.parseInt(index[i]) < 1) {
+                return new IncorrectCommand(String.format(MESSAGE_INVALID_COMMAND_FORMAT, DoneCommand.MESSAGE_USAGE));
+            }
+            targetIndex[i] = Integer.parseInt(index[i]);
+        }
+        targetIndex = sort(targetIndex);
+        return new DoneCommand(targetIndex);
+    }
 
-	// sorts in reverse order
+    // sorts in reverse order
 ```
 ###### /src/main/java/seedu/task/model/Model.java
 ``` java
-	/** Complete the given task. */
-	void completeTask(int index) throws UniqueTaskList.TaskNotFoundException;
+    /** Complete the given task. */
+    void completeTask(int index) throws UniqueTaskList.TaskNotFoundException;
 
 ```
 ###### /src/main/java/seedu/task/model/ModelManager.java
 ``` java
-	@Override
-	public synchronized void completeTask(int index) throws TaskNotFoundException {
-		taskManager.completeTask(index);
-		indicateTaskManagerChanged();
-	}
+    @Override
+    public synchronized void completeTask(int index) throws TaskNotFoundException {
+        taskManager.completeTask(index);
+        indicateTaskManagerChanged();
+    }
 
 ```
 ###### /src/main/java/seedu/task/model/task/ReadOnlyTask.java
 ``` java
-	/**
-	 * Formats the task as text, showing all task details.
-	 */
-	default String getAsText() {
-		final StringBuilder builder = new StringBuilder();
-		builder.append(getTaskName());
-		if (getTaskDate() != null) {
-			builder.append(" Date: ").append(getTaskDate().toString());
-		}
-		if (getTaskStartTime() != null) {
-			builder.append(" Start time: ").append(getTaskStartTime());
-		}
-		if (getTaskEndTime() != null) {
-			builder.append(" End Time: ").append(getTaskEndTime());
-		}
-		builder.append(" Description: " + getTaskDescription()).append(" Status: ").append(getTaskStatus());
+    /**
+     * Formats the task as text, showing all task details.
+     */
+    default String getAsText() {
+        final StringBuilder builder = new StringBuilder();
+        builder.append(getTaskName());
+        if (getTaskDate() != null) {
+            builder.append(" Date: ").append(getTaskDate().toString());
+        }
+        if (getTaskStartTime() != null) {
+            builder.append(" Start time: ").append(getTaskStartTime());
+        }
+        if (getTaskEndTime() != null) {
+            builder.append(" End Time: ").append(getTaskEndTime());
+        }
+        builder.append(" Description: " + getTaskDescription());
 
-		getTags().forEach(builder::append);
-		return builder.toString();
-	}
+        getTags().forEach(builder::append);
+        return builder.toString();
+    }
 ```
 ###### /src/main/java/seedu/task/model/task/Task.java
 ``` java
-	public TaskStatus getTaskStatus() {
-		return taskStatus;
-	}
+    public TaskStatus getTaskStatus() {
+        return taskStatus;
+    }
 
 ```
 ###### /src/main/java/seedu/task/model/task/Task.java
 ``` java
-	public void setTaskStatus(TaskStatus taskStatus) {
-		this.taskStatus = taskStatus;
-	}
+    public void setTaskStatus(TaskStatus taskStatus) {
+        this.taskStatus = taskStatus;
+    }
 
 ```
 ###### /src/main/java/seedu/task/model/task/TaskStatus.java
 ``` java
-
 public class TaskStatus {
 
-	public String status;
+    public String status;
 
-	public static final String MESSAGE_INCOMPLETE = "Ongoing";
-	public static final String MESSAGE_DONE = "Completed";
+    public static final String MESSAGE_INCOMPLETE = "Ongoing";
+    public static final String MESSAGE_DONE = "Completed";
 
-	public TaskStatus(String status) {
-		this.status = status;
-	}
+    public TaskStatus(String status) {
+        this.status = status;
+    }
 
-	@Override
-	public String toString() {
-		return status;
-	}
+    @Override
+    public String toString() {
+        return status;
+    }
 
-	@Override
-	public boolean equals(Object other) {
-		return other == this // short circuit if same object
-				|| (other instanceof TaskStatus // instanceof handles nulls
-						&& this.status.equals(((TaskStatus) other).status)); // state
-																				// check
-	}
+    @Override
+    public boolean equals(Object other) {
+        return other == this // short circuit if same object
+                || (other instanceof TaskStatus // instanceof handles nulls
+                        && this.status.equals(((TaskStatus) other).status)); // state
+                                                                             // check
+    }
 
-	@Override
-	public int hashCode() {
-		return status.hashCode();
-	}
+    @Override
+    public int hashCode() {
+        return status.hashCode();
+    }
 }
 ```
 ###### /src/main/java/seedu/task/model/TaskManager.java
 ``` java
-	// Mark a task as completed
-	public void completeTask(int index) throws UniqueTaskList.TaskNotFoundException {
-		try {
-			tasks.complete(index);
-		} catch (Exception e) {
-			throw new UniqueTaskList.TaskNotFoundException();
-		}
-	}
+    // Mark a task as completed
+    public void completeTask(int index) throws UniqueTaskList.TaskNotFoundException {
+        try {
+            tasks.complete(index);
+        } catch (Exception e) {
+            throw new UniqueTaskList.TaskNotFoundException();
+        }
+    }
 
 ```
 ###### /src/main/java/seedu/task/model/util/SampleDataUtil.java
 ``` java
 public class SampleDataUtil {
-
     public static Task[] getSampleTasks() {
-	try {
-	    return new Task[] {
-		    new Task(new TaskName("Buy apple juice"), new TaskDate("010117"), new TaskTime("0800"),
-			    new TaskTime("1000"), new String("Look out for lucky draws."), new TaskStatus("Ongoing"),
-			    new UniqueTagList()),
-		    new Task(new TaskName("Buy blueberry juice"), new TaskDate("020117"), new TaskTime("0900"),
-			    new TaskTime("1001"), new String("Look out for lucky dips."), new TaskStatus("Ongoing"),
-			    new UniqueTagList()),
-		    new Task(new TaskName("Buy coke"), new TaskDate("030117"), new TaskTime("0930"),
-			    new TaskTime("1002"), new String("Look out for traffic."), new TaskStatus("Ongoing"),
-			    new UniqueTagList()),
-		    new Task(new TaskName("Buy isotonic drinks"), new TaskDate("040117"), new TaskTime("1000"),
-			    new TaskTime("1100"), new String("Look out for promotions."), new TaskStatus("Ongoing"),
-			    new UniqueTagList()),
-		    new Task(new TaskName("Buy orange juice"), new TaskDate("050117"), new TaskTime("1010"),
-			    new TaskTime("1100"), new String("Look out for sweets along the way."),
-			    new TaskStatus("Ongoing"), new UniqueTagList()),
-		    new Task(new TaskName("Pick Jasmine from work"), new TaskDate("050117"), new TaskTime("1800"),
-			    new TaskTime("1830"), new String("Take note of traffic jams."), new TaskStatus("Ongoing"),
-			    new UniqueTagList()),
-		    new Task(new TaskName("Pick James from school"), new TaskDate("050117"), new TaskTime("1830"),
-			    new TaskTime("1900"), new String("Take note of traffic jams and kids on the road."),
-			    new TaskStatus("Ongoing"), new UniqueTagList()),
-		    new Task(new TaskName("Pick up takeaways from hawker centre"), new TaskDate("050117"),
-			    new TaskTime("2000"), new TaskTime("2020"), new String("Call in advance for food order."),
-			    new TaskStatus("Ongoing"), new UniqueTagList()),
-		    new Task(new TaskName("Buy toiletries."), new TaskDate("090117"), new TaskTime("1830"),
-			    new TaskTime("1900"), new String("Check for ongoing promotions."),
-			    new TaskStatus("Ongoing"), new UniqueTagList()),
-		    new Task(new TaskName("Send dad home from airport"), new TaskDate("100117"), new TaskTime("2230"),
-			    new TaskTime("2350"), new String("Take note of traffic jams and kids on the road."),
-			    new TaskStatus("Ongoing"), new UniqueTagList())
-			    };
+        try {
+            return new Task[] {
+                new Task(new TaskName("Buy apple juice"), new TaskDate("010117"), new TaskTime("0800"),
+                            new TaskTime("1000"), new String("Look out for lucky draws."), new TaskStatus("Ongoing"),
+                            new UniqueTagList()),
+                new Task(new TaskName("Buy blueberry juice"), new TaskDate("020117"), new TaskTime("0900"),
+                            new TaskTime("1001"), new String("Look out for lucky dips."), new TaskStatus("Ongoing"),
+                            new UniqueTagList()),
+                new Task(new TaskName("Buy coke"), new TaskDate("030117"), new TaskTime("0930"),
+                            new TaskTime("1002"), new String("Look out for traffic."), new TaskStatus("Ongoing"),
+                            new UniqueTagList()),
+                new Task(new TaskName("Buy isotonic drinks"), new TaskDate("040117"), new TaskTime("1000"),
+                            new TaskTime("1100"), new String("Look out for promotions."), new TaskStatus("Ongoing"),
+                            new UniqueTagList()),
+                new Task(new TaskName("Buy orange juice"), new TaskDate("050117"), new TaskTime("1010"),
+                            new TaskTime("1100"), new String("Look out for sweets along the way."),
+                            new TaskStatus("Ongoing"), new UniqueTagList()),
+                new Task(new TaskName("Pick Jasmine from work"), new TaskDate("050117"), new TaskTime("1800"),
+                            new TaskTime("1830"), new String("Take note of traffic jams."), new TaskStatus("Ongoing"),
+                            new UniqueTagList()),
+                new Task(new TaskName("Pick James from school"), new TaskDate("050117"), new TaskTime("1830"),
+                            new TaskTime("1900"), new String("Take note of traffic jams and kids on the road."),
+                            new TaskStatus("Ongoing"), new UniqueTagList()),
+                new Task(new TaskName("Pick up takeaways from hawker centre"), new TaskDate("050117"),
+                            new TaskTime("2000"), new TaskTime("2020"), new String("Call in advance for food order."),
+                            new TaskStatus("Ongoing"), new UniqueTagList()),
+                new Task(new TaskName("Buy toiletries"), new TaskDate("090117"), new TaskTime("1830"),
+                            new TaskTime("1900"), new String("Check for ongoing promotions."),
+                            new TaskStatus("Ongoing"), new UniqueTagList()),
+                new Task(new TaskName("Send dad home from airport"), new TaskDate("100117"), new TaskTime("2230"),
+                            new TaskTime("2350"), new String("Take note of traffic jams and kids on the road."),
+                            new TaskStatus("Ongoing"), new UniqueTagList())
 
-	} catch (IllegalValueException e) {
-	    throw new AssertionError("sample data cannot be invalid", e);
+            };
 
-	}
+        } catch (IllegalValueException e) {
+            throw new AssertionError("sample data cannot be invalid", e);
+        }
+    }
 
-	public static ReadOnlyTaskManager getSampleTaskManager() {
-		try {
-			TaskManager sampleTM = new TaskManager();
-			for (Task sampleTask : getSampleTasks()) {
-				sampleTM.addJobTask(sampleTask);
-			}
-			return sampleTM;
-		} catch (DuplicateTaskException e) {
-			throw new AssertionError("sample data cannot contain duplicate tasks", e);
-		}
-	}
+    public static ReadOnlyTaskManager getSampleTaskManager() {
+        try {
+            TaskManager sampleTM = new TaskManager();
+            for (Task sampleTask : getSampleTasks()) {
+                sampleTM.addJobTask(sampleTask);
+            }
+            return sampleTM;
+        } catch (DuplicateTaskException e) {
+            throw new AssertionError("sample data cannot contain duplicate tasks", e);
+        }
+    }
 }
 ```
 ###### /src/main/java/seedu/task/storage/XmlAdaptedTask.java
@@ -254,81 +259,85 @@ public class SampleDataUtil {
  */
 public class XmlAdaptedTask {
 
-	@XmlElement(required = true)
-	private String taskName;
-	@XmlElement(required = true)
-	private String taskDate;
-	@XmlElement(required = true)
-	private String taskStartTime;
-	@XmlElement(required = true)
-	private String taskEndTime;
-	@XmlElement(required = true)
-	private String taskDescription;
-	@XmlElement(required = true)
-	private String taskStatus;
+    @XmlElement(required = true)
+    private String taskName;
+    @XmlElement(required = true)
+    private String taskDate;
+    @XmlElement(required = true)
+    private String taskStartTime;
+    @XmlElement(required = true)
+    private String taskEndTime;
+    @XmlElement(required = true)
+    private String taskDescription;
+    @XmlElement(required = true)
+    private String taskStatus;
 
-	@XmlElement
-	private List<XmlAdaptedTag> tagged = new ArrayList<>();
+    @XmlElement
+    private List<XmlAdaptedTag> tagged = new ArrayList<>();
 
 ```
 ###### /src/main/java/seedu/task/ui/MainWindow.java
 ``` java
-	private static final String ICON = "/images/task_manager.png";
+    private static final String ICON = "/images/task_manager.png";
 ```
 ###### /src/main/java/seedu/task/ui/TaskCard.java
 ``` java
 public class TaskCard extends UiPart<Region> {
 
-	private static final String FXML = "TaskListCard.fxml";
+    private static final String FXML = "TaskListCard.fxml";
 
-	@FXML
-	private HBox cardPane;
-	@FXML
-	private Label taskName;
-	@FXML
-	private Label id;
-	@FXML
-	private Label taskDate;
-	@FXML
-	private Label taskTime;
-	@FXML
-	private Label taskDescription;
-	@FXML
-	private Label taskStatus;
-	@FXML
-	private FlowPane tags;
+    @FXML
+    private HBox cardPane;
+    @FXML
+    private Label taskName;
+    @FXML
+    private Label id;
+    @FXML
+    private Label taskDate;
+    @FXML
+    private Label taskTime;
+    @FXML
+    private Label taskDescription;
+    @FXML
+    private Label taskStatus;
+    @FXML
+    private FlowPane tags;
 
-	public TaskCard(ReadOnlyTask task, int displayedIndex) {
-		super(FXML);
+    public TaskCard(ReadOnlyTask task, int displayedIndex) {
+        super(FXML);
 
-		id.setText(displayedIndex + ". ");
-		if (task.getTaskName() != null) {
-			taskName.setText(task.getTaskName().toString());
-		}
-		if (task.getTaskDate() != null) {
-			taskDate.setText("Date : " + task.getTaskDate().toString());
-		} else
-			taskDate.setText("Date: -");
-		if (task.getTaskStartTime() != null && task.getTaskEndTime() != null) {
-			taskTime.setText("Time: " + task.getTaskStartTime().toString() + "-" + task.getTaskEndTime());
-		} else if (task.getTaskStartTime() != null) {
-			taskTime.setText("Start Time: " + task.getTaskStartTime().toString());
-		} else if (task.getTaskEndTime() != null) {
-			taskTime.setText("End Time: " + task.getTaskEndTime().toString());
-		} else
-			taskTime.setText("Time: -");
-		if (task.getTaskDescription() != null) {
+        id.setText(displayedIndex + ". ");
+        if (task.getTaskName() != null) {
+            taskName.setText(task.getTaskName().toString());
+        }
+        if (task.getTaskDate() != null) {
+            taskDate.setText("Date : " + task.getTaskDate().toString());
+        } else {
+            taskDate.setText("Date: -");
+        }
+        if (task.getTaskStartTime() != null && task.getTaskEndTime() != null) {
+            taskTime.setText(
+                    "Time: " + task.getTaskStartTime().toString() + "-" + task.getTaskEndTime());
+        } else if (task.getTaskStartTime() != null) {
+            taskTime.setText("Start Time: " + task.getTaskStartTime().toString());
+        } else if (task.getTaskEndTime() != null) {
+            taskTime.setText("End Time: " + task.getTaskEndTime().toString());
+        } else {
+            taskTime.setText("Time: -");
+        }
+        if (task.getTaskDescription() != null) {
 
-			taskDescription.setText("Description: " + task.getTaskDescription().toString());
-		} else
-			taskDescription.setText("Description: -");
-		taskStatus.setText("Task Status: " + task.getTaskStatus().toString());
+            taskDescription.setText("Description: " + task.getTaskDescription().toString());
+        } else {
+            taskDescription.setText("Description: -");
+        }
+        taskStatus.setText("Task Status: " + task.getTaskStatus().toString());
 
-		initTags(task);
-	}
+        initTags(task);
+    }
 
 ```
 ###### /src/main/java/seedu/task/ui/UiManager.java
 ``` java
-	private static final String ICON_APPLICATION = "/images/task_manager.png";
+    private static final String ICON_APPLICATION = "/images/task_manager.png";
 ```
