--- a/collated/main/A0163673Y.md
+++ b/collated/main/A0163673Y.md
@@ -164,6 +164,53 @@ public class TaskListStoragePathChangedEvent extends BaseEvent {
         }
     }
 ```
+###### /java/seedu/task/logic/commands/LoadStorageCommand.java
+``` java
+/**
+ * Set the storage location for the data of this application.
+ */
+public class LoadStorageCommand extends Command {
+
+    public static final String COMMAND_WORD = "loadstorage";
+
+    public static final String MESSAGE_USAGE = COMMAND_WORD
+            + ": Loads the data for this application from the specified location.\n"
+            + "Parameters: Storage file path"
+            + "Example: " + COMMAND_WORD + " /Users/Josh/Documents/tasks/";
+    public static final String MESSAGE_FILE_NOT_FOUND = "Unable to find %1$s";
+    public static final String MESSAGE_IO_ERROR = "Something has gone wrong, please try again: %1$s";
+    public static final String MESSAGE_LOAD_STORAGE_SUCCESS = "Loaded tasklist.xml from: %1$s";
+
+    private String storagePath;
+
+    public LoadStorageCommand(String storagePath) {
+        this.storagePath = storagePath;
+    }
+
+    @Override
+    public CommandResult execute() throws CommandException {
+
+        // load new file
+        File newStoragePath = new File(storagePath + "/tasklist.xml");
+        if (!newStoragePath.exists()) {
+            throw new CommandException(String.format(MESSAGE_FILE_NOT_FOUND, newStoragePath.getAbsolutePath()));
+        }
+
+        // save new config file and update MainApp's config object to hold new storage file path
+        Config newConfig = new Config();
+        newConfig.setAddressBookFilePath(newStoragePath.getPath());
+        try {
+            ConfigUtil.saveConfig(newConfig, Config.DEFAULT_CONFIG_FILE);
+            MainApp.getInstance().setTaskListFilePath(newStoragePath.getPath());
+        } catch (IOException e) {
+            throw new CommandException(String.format(MESSAGE_IO_ERROR, e.getMessage()));
+        }
+
+        return new CommandResult(String.format(MESSAGE_LOAD_STORAGE_SUCCESS, newStoragePath.getAbsolutePath()));
+    }
+
+}
+```
 ###### /java/seedu/task/logic/commands/SetStorageCommand.java
 ``` java
 /**
@@ -174,7 +221,7 @@ public class SetStorageCommand extends Command {
     public static final String COMMAND_WORD = "setstorage";
 
     public static final String MESSAGE_USAGE = COMMAND_WORD
-            + ": Set the storage location for the data of this application.\n"
+            + ": Moves the data storage file of this application to another location.\n"
             + "Parameters: Storage file path"
             + "Example: " + COMMAND_WORD + " /Users/Josh/Documents/tasks/";
     public static final String MESSAGE_INVALID_DIRECTORY = "%1$s is an invalid directory";
@@ -285,24 +332,24 @@ public class SetStorageCommand extends Command {
         return dueDate.isPresent() ? Optional.of(new DueDate(dueDate.get())) : Optional.empty();
     }
 ```
-###### /java/seedu/task/logic/parser/SetStorageCommandParser.java
+###### /java/seedu/task/logic/parser/StorageCommandParser.java
 ``` java
 /**
 * Parses input arguments and creates a new SetStorageCommand object.
 */
-public class SetStorageCommandParser {
+public class StorageCommandParser {
 
     /**
      * Parses the given {@code String} of arguments in the context of the SetStorageCommand
      * and returns an SetStorageCommand object for execution.
      */
-    public Command parse(String arg) {
+    public Command parse(String arg, boolean loadFile) {
         try {
             arg = arg.trim();
             if (arg.isEmpty()) {
                 throw new NoSuchElementException();
             }
-            return new SetStorageCommand(arg);
+            return loadFile ? new LoadStorageCommand(arg) : new SetStorageCommand(arg);
         } catch (NoSuchElementException nsee) {
             return new IncorrectCommand(String.format(MESSAGE_INVALID_COMMAND_FORMAT, SetStorageCommand.MESSAGE_USAGE));
         }
@@ -322,6 +369,12 @@ public class SetStorageCommandParser {
     public void setTaskListFilePath(String path) {
         config.setAddressBookFilePath(path);
         storage.setTaskListStorageFilePath(path);
+    }
+
+    @Subscribe
+    public void handleTaskListStoragePathChangedEvent(TaskListStoragePathChangedEvent event) {
+        model.resetData(initModelManager(storage, userPrefs).getTaskList());
+        model.updateFilteredListToShowAll();
     }
 ```
 ###### /java/seedu/task/model/ModelManager.java
@@ -411,6 +464,18 @@ public class SetStorageCommandParser {
     @Override
     public void setTaskListStorageFilePath(String filePath) {
         this.filePath = filePath;
+    }
+```
+###### /java/seedu/task/ui/CommandBox.java
+``` java
+    /**
+     * Sets the command box style to indicate a failed command.
+     */
+    private void setStyleToIndicateCommandFailure() {
+        if (commandTextField.getStyleClass().contains(ERROR_STYLE_CLASS)) {
+            return;
+        }
+        commandTextField.getStyleClass().add(ERROR_STYLE_CLASS);
     }
 ```
 ###### /java/seedu/task/ui/StatusBarFooter.java
