--- a/collated/main/A0163744B.md
+++ b/collated/main/A0163744B.md
@@ -383,6 +383,37 @@ public class ListCommandParser {
     }
 }
 ```
+###### /java/seedu/task/logic/parser/UncompleteCommandParser.java
+``` java
+package seedu.task.logic.parser;
+
+import static seedu.task.commons.core.Messages.MESSAGE_INVALID_COMMAND_FORMAT;
+
+import java.util.Optional;
+
+import seedu.task.logic.commands.Command;
+import seedu.task.logic.commands.IncorrectCommand;
+import seedu.task.logic.commands.UncompleteCommand;
+
+/**
+ * Parses input arguments for the uncomplete command and creates a new UncompleteCommand object
+ */
+public class UncompleteCommandParser {
+    /**
+     * Parses the given {@code String} of arguments in the context of the UncompleteCommand
+     * and returns an Command object for execution.
+     */
+    public Command parse(String args) {
+        Optional<Integer> index = ParserUtil.parseIndex(args);
+        if (!index.isPresent()) {
+            return new IncorrectCommand(
+                    String.format(MESSAGE_INVALID_COMMAND_FORMAT, UncompleteCommand.MESSAGE_USAGE));
+        }
+
+        return new UncompleteCommand(index.get());
+    }
+}
+```
 ###### /java/seedu/task/model/Model.java
 ``` java
     /** Updates the filter of the filtered task list to filter by given completion */
@@ -778,6 +809,16 @@ public class DateParser {
     private static final String EMPTY_DATE_STRING = "";
     private static final int MONTH_OFFSET = 1;
 
+    private static final int MONTHS_PER_YEAR = 12;
+    private static final int DAYS_PER_WEEK = 7;
+    private static final int HOURS_PER_DAY = 24;
+    private static final int MINUTES_PER_HOUR = 60;
+    private static final int MINIMUM_YEAR = 0;
+    private static final int MINIMUM_MONTH = 0;
+    private static final int MINIMUM_DAY = 1;
+    private static final int MINIMUM_HOUR = 0;
+    private static final int MINIMUM_MINUTE = 0;
+
 ```
 ###### /java/seedu/task/model/util/DateParser.java
 ``` java
@@ -822,19 +863,26 @@ public class DateParser {
     }
 
     public static boolean isValidDate(int year, int month, int day, int hour, int minute) {
-        if (year < 0 || month < 0 || month > 11) {
+        if (year < MINIMUM_YEAR || month < MINIMUM_MONTH || month >= MONTHS_PER_YEAR) {
             return false;
         }
         Calendar cal = Calendar.getInstance();
         cal.set(Calendar.YEAR, year);
         cal.set(Calendar.MONTH, month);
-        if (day < 1 || day > cal.getActualMaximum(Calendar.DAY_OF_MONTH)) {
+        if (day < MINIMUM_DAY || day > cal.getActualMaximum(Calendar.DAY_OF_MONTH)) {
             return false;
         }
-        if (hour < 0 || hour > 23 || minute < 0 || minute > 59) {
+        if (hour < MINIMUM_HOUR || hour >= HOURS_PER_DAY || minute < MINIMUM_MINUTE || minute >= MINUTES_PER_HOUR) {
             return false;
         }
         return true;
     }
 
+```
+###### /java/seedu/task/storage/XmlAdaptedTask.java
+``` java
+    @XmlElement(required = false)
+    private String start;
+    @XmlElement(required = false)
+    private String end;
 ```
