--- a/collated/main/A0164103W.md
+++ b/collated/main/A0164103W.md
@@ -294,7 +294,7 @@ public class DueDate {
 
     private static int compareDayOfWeek(int day1, int day2) {
         return day2 - day1 < 0 ?
-                day2 - day1 + 7 :
+                day2 - day1 + DAYS_PER_WEEK :
                 day2 - day1;
     }
 
