--- a/collated/test/A0163673Y.md
+++ b/collated/test/A0163673Y.md
@@ -70,6 +70,31 @@
         assertEditSuccess(taskListIndex, taskListIndex, detailsToEdit, editedTask);
     }
 ```
+###### /java/guitests/LoadStorageCommandTest.java
+``` java
+public class LoadStorageCommandTest extends TaskListGuiTest {
+
+    @Test
+    public void setStorage() {
+        // test valid path
+        String path = "src/test/data/LoadStoragePathTest";
+        File file = new File(path + "/tasklist.xml");
+        assertTrue(file.exists());
+        assertTrue(taskListPanel.getNumberOfTasks() == 7);
+        commandBox.runCommand("loadstorage " + path);
+        assertTrue(taskListPanel.getNumberOfTasks() == 1);
+
+        // test invalid path
+        String invalidPath = "invalidpath";
+        File invalidFile = new File(invalidPath + "/tasklist.xml");
+        commandBox.runCommand("loadstorage " + invalidPath);
+        assertEquals(
+                String.format(LoadStorageCommand.MESSAGE_FILE_NOT_FOUND, invalidFile.getAbsolutePath()),
+                resultDisplay.getText());
+    }
+
+}
+```
 ###### /java/guitests/SetStorageCommandTest.java
 ``` java
 public class SetStorageCommandTest extends TaskListGuiTest {
